# remotelog

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  next.config.ts  package-lock.json  package.json  tsconfig.json
installer/: Cargo.toml
installer/src/: main.rs
prisma/: schema.prisma  seed-reseller.ts  seed.ts
prisma/migrations/20240101000000_init/: migration.sql
prisma/migrations/20260330000000_add_customers_contacts/: migration.sql
prisma/migrations/20260331000000_add_contact_mobile_device_contactid/: migration.sql
prisma/migrations/20260331100000_session_optional_device/: migration.sql
prisma/migrations/20260401000000_apikey_createdat/: migration.sql
prisma/migrations/20260401100000_billing/: migration.sql
prisma/migrations/20260402000000_session_intervals/: migration.sql
prisma/migrations/20260402200000_user_notif_prefs/: migration.sql
prisma/migrations/20260406000000_session_hierarchy/: migration.sql
prisma/migrations/20260407000000_addon_system/: migration.sql
prisma/migrations/20260407100000_customer_extended_fields/: migration.sql
public/: manifest.json
public/install/: remotelog-setup-mac
src/: auth.config.ts  proxy.ts
src/addons/: license.ts  registry.server.ts  registry.ts  types.ts
src/app/: globals.css  layout.tsx
src/hooks/: use-session-reminder.ts
src/lib/: api-auth.ts  auth.ts  billing.ts  contact-name.ts  crypto.ts  email.ts  export-types.ts  permissions.ts  rate-limit.ts  setup.ts  smtp-config.ts  timer-context.tsx
src/types/: wakeonlan.d.ts
(+188 files in other folders)
