[package]
name = "remotelog-setup"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "remotelog-setup"
path = "src/main.rs"

[dependencies]
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
